src/bindings.rs

#[test]
fn bindgen_test_layout_pt_packet_mode_exec() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_mode_exec>(),
        4usize,
        concat!("Size of: ", stringify!(pt_packet_mode_exec))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_mode_exec>(),
        4usize,
        concat!("Alignment of ", stringify!(pt_packet_mode_exec))
    );
}
impl pt_packet_mode_exec {
    #[inline]
    pub fn csl(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_csl(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn csd(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(1usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_csd(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(1usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(csl: u32, csd: u32) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let csl: u32 = unsafe { ::std::mem::transmute(csl) };
            csl as u64
        });
        __bindgen_bitfield_unit.set(1usize, 1u8, {
            let csd: u32 = unsafe { ::std::mem::transmute(csd) };
            csd as u64
        });
        __bindgen_bitfield_unit
    }
}
#[doc = " A mode.tsx packet."]
#[repr(C)]
#[repr(align(4))]
#[derive(Debug, Copy, Clone)]
pub struct pt_packet_mode_tsx {
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
    pub __bindgen_padding_0: [u8; 3usize],
}
#[test]
fn bindgen_test_layout_pt_packet_mode_tsx() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_mode_tsx>(),
        4usize,
        concat!("Size of: ", stringify!(pt_packet_mode_tsx))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_mode_tsx>(),
        4usize,
        concat!("Alignment of ", stringify!(pt_packet_mode_tsx))
    );
}
impl pt_packet_mode_tsx {
    #[inline]
    pub fn intx(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_intx(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn abrt(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(1usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_abrt(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(1usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(intx: u32, abrt: u32) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let intx: u32 = unsafe { ::std::mem::transmute(intx) };
            intx as u64
        });
        __bindgen_bitfield_unit.set(1usize, 1u8, {
            let abrt: u32 = unsafe { ::std::mem::transmute(abrt) };
            abrt as u64
        });
        __bindgen_bitfield_unit
    }
}
#[doc = " A mode packet."]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct pt_packet_mode {
    #[doc = " Mode leaf."]
    pub leaf: pt_mode_leaf,
    pub bits: pt_packet_mode__bindgen_ty_1,
}
#[doc = " Mode bits."]
#[repr(C)]
#[derive(Copy, Clone)]
pub union pt_packet_mode__bindgen_ty_1 {
    #[doc = " Packet: mode.exec."]
    pub exec: pt_packet_mode_exec,
    #[doc = " Packet: mode.tsx."]
    pub tsx: pt_packet_mode_tsx,
    _bindgen_union_align: u32,
}
#[test]
fn bindgen_test_layout_pt_packet_mode__bindgen_ty_1() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_mode__bindgen_ty_1>(),
        4usize,
        concat!("Size of: ", stringify!(pt_packet_mode__bindgen_ty_1))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_mode__bindgen_ty_1>(),
        4usize,
        concat!("Alignment of ", stringify!(pt_packet_mode__bindgen_ty_1))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<pt_packet_mode__bindgen_ty_1>())).exec as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_mode__bindgen_ty_1),
            "::",
            stringify!(exec)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<pt_packet_mode__bindgen_ty_1>())).tsx as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_mode__bindgen_ty_1),
            "::",
            stringify!(tsx)
        )
    );
}
#[test]
fn bindgen_test_layout_pt_packet_mode() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_mode>(),
        8usize,
        concat!("Size of: ", stringify!(pt_packet_mode))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_mode>(),
        4usize,
        concat!("Alignment of ", stringify!(pt_packet_mode))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_mode>())).leaf as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_mode),
            "::",
            stringify!(leaf)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_mode>())).bits as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_mode),
            "::",
            stringify!(bits)
        )
    );
}
#[doc = " A PIP packet."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_packet_pip {
    #[doc = " The CR3 value."]
    pub cr3: u64,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
    pub __bindgen_padding_0: [u8; 7usize],
}
#[test]
fn bindgen_test_layout_pt_packet_pip() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_pip>(),
        16usize,
        concat!("Size of: ", stringify!(pt_packet_pip))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_pip>(),
        8usize,
        concat!("Alignment of ", stringify!(pt_packet_pip))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_pip>())).cr3 as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_pip),
            "::",
            stringify!(cr3)
        )
    );
}
impl pt_packet_pip {
    #[inline]
    pub fn nr(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_nr(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(nr: u32) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let nr: u32 = unsafe { ::std::mem::transmute(nr) };
            nr as u64
        });
        __bindgen_bitfield_unit
    }
}
#[doc = " A TSC packet."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_packet_tsc {
    #[doc = " The TSC value."]
    pub tsc: u64,
}
#[test]
fn bindgen_test_layout_pt_packet_tsc() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_tsc>(),
        8usize,
        concat!("Size of: ", stringify!(pt_packet_tsc))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_tsc>(),
        8usize,
        concat!("Alignment of ", stringify!(pt_packet_tsc))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_tsc>())).tsc as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_tsc),
            "::",
            stringify!(tsc)
        )
    );
}
#[doc = " A CBR packet."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_packet_cbr {
    #[doc = " The core/bus cycle ratio."]
    pub ratio: u8,
}
#[test]
fn bindgen_test_layout_pt_packet_cbr() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_cbr>(),
        1usize,
        concat!("Size of: ", stringify!(pt_packet_cbr))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_cbr>(),
        1usize,
        concat!("Alignment of ", stringify!(pt_packet_cbr))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_cbr>())).ratio as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_cbr),
            "::",
            stringify!(ratio)
        )
    );
}
#[doc = " A TMA packet."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_packet_tma {
    #[doc = " The crystal clock tick counter value."]
    pub ctc: u16,
    #[doc = " The fast counter value."]
    pub fc: u16,
}
#[test]
fn bindgen_test_layout_pt_packet_tma() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_tma>(),
        4usize,
        concat!("Size of: ", stringify!(pt_packet_tma))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_tma>(),
        2usize,
        concat!("Alignment of ", stringify!(pt_packet_tma))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_tma>())).ctc as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_tma),
            "::",
            stringify!(ctc)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_tma>())).fc as *const _ as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_tma),
            "::",
            stringify!(fc)
        )
    );
}
#[doc = " A MTC packet."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_packet_mtc {
    #[doc = " The crystal clock tick counter value."]
    pub ctc: u8,
}
#[test]
fn bindgen_test_layout_pt_packet_mtc() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_mtc>(),
        1usize,
        concat!("Size of: ", stringify!(pt_packet_mtc))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_mtc>(),
        1usize,
        concat!("Alignment of ", stringify!(pt_packet_mtc))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_mtc>())).ctc as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_mtc),
            "::",
            stringify!(ctc)
        )
    );
}
#[doc = " A CYC packet."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_packet_cyc {
    #[doc = " The cycle counter value."]
    pub value: u64,
}
#[test]
fn bindgen_test_layout_pt_packet_cyc() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_cyc>(),
        8usize,
        concat!("Size of: ", stringify!(pt_packet_cyc))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_cyc>(),
        8usize,
        concat!("Alignment of ", stringify!(pt_packet_cyc))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_cyc>())).value as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_cyc),
            "::",
            stringify!(value)
        )
    );
}
#[doc = " A VMCS packet."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_packet_vmcs {
    pub base: u64,
}
